# electric-particles-simulation

./: Cargo.toml  README.md  main.js  package.json  tsconfig.json  webpack.config.js
js/: index.ts
src/: lib.rs
static/: index.html
