[package]
name = "vector-field"
description = "A vector field simulation, using Typescript, Electron and Rust."
version = "0.1.0"
authors = ["Luigi Sarot Piucco <luigipiucco@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3.36"
serde = { version = "1.0.104", features = ["derive"] }
rand = { version ="0.7.3", features = ["wasm-bindgen"]}
rand_distr = "0.2.2"


[dependencies.wasm-bindgen]
version = "0.2.59"
features = [
  "serde-serialize"
]

[dependencies.web-sys]
version = "0.3.36"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "Performance",
  "PerformanceTiming",
  "console",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"
